erDiagram
    MEMBERSHIPS ||--o{ MEMBERS : "conceptual by membership"
    MEMBERS ||--o{ BOOKINGS : "conceptual by member name"
    MEMBERS ||--o{ PAYMENTS : "conceptual by member name"
    MEMBERS ||--o{ RECEIPTS : "FK memberId"
    CLASSES ||--o{ CALENDAR_SLOTS : "conceptual by className"
    TRAINERS ||--o{ CALENDAR_SLOTS : "conceptual by trainer"
    PAYMENTS ||--o{ NOTIFICATIONS : "conceptual refType/refId"

    MEMBERSHIPS {
      int id PK
      string name
      int price
      string period
      string visits
      string perksJson
    }

    CALENDAR_SLOTS {
      int id PK
      string date
      string time
      string className
      string trainer
      int capacity
      int booked
    }

    NOTIFICATIONS {
      int id PK
      string type
      string title
      string message
      string createdAt
      int isRead
      string refType
      string refId
    }

    SERVICES {
      int id PK
      string name
      string category
      int price
      string unit
      string description
    }

    DEALS {
      int id PK
      string client
      string offer
      int value
      string stage
      int probability
      string manager
      string nextStep
      string date
    }

    DEMAND_HISTORY {
      int id PK
      string month
      int visits
      int pool
      int tennis
    }

    WORKOUT_TEMPLATES {
      int id PK
      string name
      string category
      string level
      int duration
      int defaultCapacity
      string created_at
    }
